# RoboDojo

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  upstream_sync.yml
.github/: pull_request_template.md
configs/: openarm.yml  openarm_anvil_v2.yml  openarm_cloth_folding.yml  openarm_lerobot.yml  openarm_wowrobo_v1_1.yml  policies.yml  protocols.yml  recipes.yml
configs/calibration/: openarm_anvil_v2.yml  openarm_wowrobo_v1_1.yml
configs/camera/: bimanual_piper_pickplace.yml  bimanual_yam.yml  bimanual_yam_molmoact2.yml  bimanual_yam_moonlake_office.yml  camera_config.yml  openarm.yml  openarm_anvil_v2.yml  openarm_cloth_folding.yml  openarm_lerobot.yml  openarm_wowrobo_v1_1.yml
configs/environment/: arx_x5.yml  bimanual_piper.yml  bimanual_piper_pickplace.yml  bimanual_yam.yml  bimanual_yam_molmoact2.yml  bimanual_yam_moonlake_office.yml  openarm_anvil_v2.yml  openarm_lerobot.yml  openarm_wowrobo_v1_1.yml
configs/reference/: bimanual_piper_pickplace.yml  bimanual_yam.yml  bimanual_yam_landmark_annotations.json  bimanual_yam_matched_frames.yml  openarm_lerobot.yml  openarm_lerobot_wrist_calibration.yml  upstream_task_contracts.yml
configs/robot/: _robot_info.json  dual_openarm.yml  dual_openarm_anvil_v2.yml  dual_openarm_wowrobo_v1_1.yml  dual_piper.yml  dual_x5.yml  dual_x5_and_franka_competition.yml  dual_yam.yml  dual_yam_molmoact2.yml  dual_yam_moonlake_office.yml
configs/scene/: conveyor.yml  molmo_yam.yml  openarm_cloth_folding.yml
configs/sim/: openarm_anvil_v2.yml  openarm_cloth_folding.yml  openarm_wowrobo_v1_1.yml  real_time_30hz.yml  sim_config.yml
configs/task/: _task.yml  align_blocks.yml  arrange_largest_number.yml  arrange_largest_number_random.yml  classify_objects_by_language.yml  deposit_coin.yml  fasten_screws.yml  fill_egg_holder.yml  fill_pen_holder.yml  fold_clothes.yml  fold_clothes_random.yml  general_pickup.yml  hang_mugs_random.yml  imitate_sorting_sequence.yml  insert_key.yml  insert_tubes.yml  make_toast.yml  make_toast_random.yml  match_and_pick_from_conveyor.yml  organize_table.yml  pack_item_into_container.yml  pack_objects_into_box.yml  pack_objects_into_box_random.yml  place_blue_cube_in_red_bin.yml  play_Xylophone.yml  play_tic_tac_toe.yml  plug_in_charger.yml  pour_balls_into_vase.yml  pour_by_language.yml  pour_liquid_into_cup.yml  pour_liquid_into_cup_random.yml  press_by_number.yml  push_T.yml  push_T_random.yml  put_bottles_into_dustbin.yml  solve_equation.yml  sort_nesting_dolls_by_size.yml  sort_nesting_dolls_by_size_random.yml  stack_blocks.yml  stack_blocks_by_language.yml  (+8 more)
configs/tooling/: moonlake_office.yml  moonlake_packing.yml  openarm.yml  piper.yml  piper_pickplace.yml  yam.yml
docker/: README.md  entrypoint.sh  install_docker_nvidia.sh  smoke_docker.sh
docs/: OPENARM.md  OPENARM_CLOTH_FOLDING.md  PREFLIGHT.md  STORAGE.md  UPSTREAM.md  YAM.md
env/: global_configs.py  seeding.py
env/camera_manager/: camera_manager.py  frame_projection.py  mount_registry.py  rig_spec.py
env/description_manager/: desc_manager.py
env/environment/: base_env.py  task_env.py
env/observation_manager/: obs_manager.py
env/planner_manager/: .gitignore  curobo_planner.py
env/reward_manager/: func_parser.py  reward_manager.py
env/robot_manager/: .gitignore  control_manager.py  robot_manager.py
env/scene_manager/: layout_manager.py  layout_overrides.py  scene_manager.py
env/seed_manager/: seed_manager.py
env_cfg/: arx_x5.yml  openarm_cloth_folding_dyna.yml
env_cfg/camera/: camera_config.yml  interact_scene.yml  openarm_cloth_folding.yml  openarm_cloth_folding_dyna.yml  template.py
scripts/: README.md  calibrate_openarm_cameras.py  eval_policy.sh  fit_openarm_lerobot_wrist_cameras.py  fit_yam_matched_frames.py  init_assets.sh  install.sh  openarm_artifact_server.py  publish_openarm_report.py  render_camera_orientation_harness.py  requirements.txt  robodojo.sh  robodojo_storage.sh  validate_openarm_visuals.py
src/: __init__.py
src/robodojo/: cli.py  (+1 more)
tests/: test_cli.py  test_contracts.py  test_curobo_planner_config.py  test_evaluation_services.py  test_garment_contract.py  test_gpu.py  test_logging.py  test_makefile.py  test_molmoact2_yam_assets.py  test_moonlake_office.py  test_moonlake_office_asset_usd.py  test_moonlake_office_runtime_contract.py  test_moonlake_packing.py  test_moonlake_packing_contracts.py  test_openarm_contract.py  test_openarm_jaw.py  test_openarm_wrist_calibration.py  test_orchestration.py  test_pipeline_utils.py  test_piper_pickplace_contract.py  test_policy_composition.py  test_preflight.py  test_processes.py  test_profiles.py  test_recipe_inventory.py  test_results_scene_filters.py  test_reward_manager_hold_and_volume.py  test_scene_export.py  test_scene_export_preview.py  test_scene_identity.py  test_scene_pose_normalization.py  test_scene_selection.py  test_scene_state_contracts.py  test_scene_visual_audit.py  test_seed_manager_layouts.py  test_setup.py  test_sim_paths.py  test_snapshots.py  test_storage_paths.py  test_storage_publish.py  (+9 more)
utils/: cluttered_generator.py  ensure_usd_path.py  path.py  pipeline_utils.py  rotations.py  storage.py  update_embodiment_config_path.py  usd_schema.py
(+551 files in other folders)
