[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "robodojo"
version = "0.2.0"
description = "RoboDojo robot simulation benchmark (eval-only release)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
authors = [{ name = "Yue Chen", email = "yuechen020614@gmail.com" }]
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "pyyaml>=6",
    "typer>=0.12",
]

[project.optional-dependencies]
sim = [
    "chardet>=3,<6",
    "ffmpeg",
    "filelock==3.13.1",
    "fsspec==2024.6.1",
    "h5py>=3.8",
    "huggingface-hub",
    "ipython<9",
    "isaaclab==2.3.2.post1",
    "isaacsim[all,extscache]==5.1.0",
    "matplotlib",
    "msgpack-numpy>=0.4.8",
    "msgpack>=1.0.8",
    "numpy==1.26.0",
    "networkx==3.3",
    "nvidia-curobo[cu12]",
    "onnx>=1.18,<1.22",
    "open3d",
    "opencv-python-headless==4.11.0.86",
    "packaging==23.0",
    "pillow==11.3.0",
    "psutil==5.9.8",
    "scikit-learn",
    "scipy==1.15.3",
    "stable-baselines3<2.8",
    "starlette==0.45.3",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "transforms3d",
    "typing-extensions==4.12.2",
    "virtualenv==20.30.0",
    "warp-lang==1.11.0",
    "websockets==12.0",
    "wheel==0.45.1",
]

[project.scripts]
robodojo = "robodojo.cli:app"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.0",
    "ruff>=0.11.7",
]

[tool.uv]
package = true
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
# Preserve legacy runtime repins whose index metadata conflicts with either the
# installed Isaac Sim or IsaacLab wheel metadata. The previous staged installer
# restored these versions after installing the simulator dependencies.
override-dependencies = [
    "filelock==3.13.1",
    "fsspec==2024.6.1",
    "networkx==3.3",
    "starlette==0.45.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
# Pin the official NVlabs revision validated with the simulator. The simulator
# preloads this project's Warp 1.11 before Isaac Sim starts its bundled extension.
nvidia-curobo = { git = "https://github.com/NVlabs/curobo.git", rev = "3fd54dc782a82e5500a771cfd47856ea499d5fef" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py311"

extend-exclude = [
    ".git",
    ".vscode",
    ".robodojo",
    "XPolicyLab",
    "logs",
    "scripts/logs",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

ignore = [
    "E402",  # module-level import not at top (common in env bootstrap)
    "UP006", # Dict vs dict (legacy annotations in env/)
    "UP035", # typing.List/Dict — legacy annotations in env/
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/robodojo/sim/evaluation/main.py" = ["E402"]  # late imports after AppLauncher bootstrap
"src/robodojo/sim/evaluation/eval_env.py" = ["E501"]
"src/robodojo/sim/environment/**/*.py" = ["E501"]
"src/robodojo/sim/tasks/**/*.py" = ["E501"]
"src/robodojo/sim/utils/save_file.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["robodojo"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
